[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resurrection"
version = "0.1.0"
description = "Agent persistence and checkpointing engine with crash recovery, time-travel debugging, and branchable durable state."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Resurrection Contributors" }]
license = { text = "MIT" }
keywords = ["agents", "checkpointing", "persistence", "recovery", "debugging"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "click>=8.1",
  "fastapi>=0.110",
  "pydantic>=2.6",
  "uvicorn>=0.27",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[project.scripts]
resurrection = "resurrection.cli:cli"

[tool.setuptools.packages.find]
include = ["resurrection*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
